# Roxel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/Modules/: Findanthrax.cmake  Findengine.cmake  Findnlohmann_json.cmake
lib/anthrax/: CMakeLists.txt
lib/anthrax/doc/: notes.txt
lib/anthrax/include/: anthrax.hpp  anthrax_types.hpp  camera.hpp  cube.hpp  internalshaders.hpp  list.hpp  shader.hpp  voxelcachemanager.hpp  voxeldisplaylist.hpp  voxeldisplaylistnode.hpp  window.hpp
lib/anthrax/lib/glad/: CMakeLists.txt
lib/anthrax/src/: anthrax.cpp  list.cpp  voxelcachemanager.cpp  voxeldisplaylist.cpp  voxeldisplaylistnode.cpp  window.cpp
lib/engine/: CMakeLists.txt
lib/engine/include/: camera.hpp  cube.hpp  first_shader.fs  internalshaders.hpp  shader.hpp  window.hpp
lib/engine/lib/glad/include/glad/: glad.h
lib/engine/lib/glad/src/: glad.c
lib/engine/src/: window.cpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
src/: CMakeLists.txt  force.hpp  game.cpp  main.cpp
src/Player/: player.cpp  player.hpp  playersettings.hpp
src/World/: cubeconvert.hpp  octree.cpp  octree.hpp  voxelset.cpp  voxelset.hpp  world.cpp  world.hpp
